@@ -33,21 +33,25 @@
 @implementation PajeEntityType
 
 + (PajeEntityType *)typeWithName:(NSString *)n
+                       withAlias:(NSString *)a
                    containerType:(PajeContainerType *)type
                            event:(PajeEvent *)e
 {
     return [[[self alloc] initWithName:n
+                             withAlias:a
                          containerType:type
                                  event:e] autorelease];
 }
 
 - (id)initWithName:(NSString *)n
+         withAlias:(NSString *)a
      containerType:(PajeContainerType *)type
              event:(PajeEvent *)e
 {
     if (self == [super init]) {
         NSColor *c;
         Assign(name, n);
+        Assign(uniqueAlias, a);
         containerType = type;
 	[containerType addContainedType:self];
         c = [[NSUserDefaults standardUserDefaults]
@@ -69,6 +73,7 @@
 - (void)dealloc
 {
     Assign(name, nil);
+    Assign(uniqueAlias, nil);
     containerType = nil;
     Assign(color, nil);
     Assign(fieldNames, nil);
@@ -89,6 +94,11 @@
 - (NSString *)name
 {
     return name;
+}
+
+- (NSString *)alias
+{
+    return uniqueAlias;
 }
 
 - (PajeContainerType *)containerType
@@ -175,27 +185,32 @@
 
 - (unsigned)hash
 {
-    return [name hash];
+    return [uniqueAlias hash];
 }
 
 - (BOOL)isEqual:(id)other
 {
-    if (other == self || other == name) return YES;
-    return [other isEqual:name];
+    if ([other isKindOfClass:[PajeEntityType class]]) {
+      return [uniqueAlias isEqualToString: [(PajeEntityType *)other alias]];
+    }else{
+      return NO;
+    }
 }
 
 - (NSComparisonResult)compare:(id)other
 {
     if ([other isKindOfClass:[PajeEntityType class]]) {
-        return [name compare:[(PajeEntityType *)other name]];
+      return [uniqueAlias compare: [(PajeEntityType *)other alias]];
+    }else{
+      return NSOrderedSame;
     }
-    return NSOrderedSame;
 }
 
 // NSCoding protocol
 - (void)encodeWithCoder:(NSCoder *)coder
 {
     [coder encodeObject:name];
+    [coder encodeObject:uniqueAlias];
     [coder encodeObject:containerType];
     [coder encodeObject:fieldNames];
     // FIXME: save other fields (from creation event, see -init)
@@ -204,10 +219,13 @@
 - (id)initWithCoder:(NSCoder *)coder
 {
     id o1;
+    id o1a;
     id o2;
     o1 = [coder decodeObject];
+    o1a = [coder decodeObject];
     o2 = [coder decodeObject];
     self = [self initWithName:o1
+                    withAlias:o1a
                 containerType:o2
                         event:nil];
     Assign(fieldNames, [coder decodeObject]);
@@ -218,19 +236,22 @@
 
 @implementation PajeContainerType
 + (PajeContainerType *)typeWithName:(NSString *)n
+                          withAlias:(NSString *)a
                       containerType:(PajeContainerType *)type
                               event:(PajeEvent *)e
 {
     return [[[self alloc] initWithName:n
+                             withAlias:a
                          containerType:type
                                  event:e] autorelease];
 }
 
 - (id)initWithName:(NSString *)n
+         withAlias:(NSString *)a
      containerType:(PajeContainerType *)type
              event:(PajeEvent *)e
 {
-    self = [super initWithName:n containerType:type event:e];
+    self = [super initWithName:n withAlias: a containerType:type event:e];
     if (self != nil) {
         allInstances = [[NSMutableArray alloc] init];
         idToInstance = NSCreateMapTable(CStringMapKeyCallBacks,
@@ -321,10 +342,11 @@
 
 @implementation PajeCategorizedEntityType
 - (id)initWithName:(NSString *)n
+         withAlias:(NSString *)a
      containerType:(PajeContainerType *)type
              event:(PajeEvent *)e
 {
-    self = [super initWithName:n containerType:type event:e];
+    self = [super initWithName:n withAlias:a containerType:type event:e];
     if (self != nil) {
         aliasToValue = NSCreateMapTable(CStringMapKeyCallBacks,
                                         NSObjectMapValueCallBacks, 50);
@@ -445,10 +467,12 @@
 
 @implementation PajeVariableType
 - (id)initWithName:(NSString *)n
+         withAlias:(NSString *)a
      containerType:(PajeContainerType *)type
              event:(PajeEvent *)e
 {
     self = [super initWithName:n
+                     withAlias:a
                  containerType:type
                          event:e];
     if (self != nil) {
@@ -520,12 +544,14 @@
 @implementation PajeLinkType
 
 + (PajeLinkType *)typeWithName:(id)n
+                     withAlias:(id)a
                  containerType:(PajeContainerType *)type
            sourceContainerType:(PajeContainerType *)sourceType
              destContainerType:(PajeContainerType *)destType
                          event:(PajeEvent *)e
 {
     return [[[self alloc] initWithName:n
+                             withAlias:a
                          containerType:type
                    sourceContainerType:sourceType
                      destContainerType:destType
@@ -533,12 +559,13 @@
 }
 
 -    (id)initWithName:(id)n
+            withAlias:(id)a
         containerType:(PajeContainerType *)type
   sourceContainerType:(PajeContainerType *)sourceType
     destContainerType:(PajeContainerType *)destType
                 event:(PajeEvent *)e
 {
-    self = [super initWithName:n containerType:type event:e];
+    self = [super initWithName:n withAlias:a containerType:type event:e];
     sourceContainerType = sourceType;
     destContainerType = destType;
     return self;
